Update connect.sh